# gfm2d

./: .bettercodehub.yml  .doxyfile  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  README.md  codecov.yml  coverage.info  makefile  report.html
assets/: config.json.orig
docs/: annotated.html  array2_8hpp_source.html  calculus_8hpp_source.html  classArray2_1_1iterator-members.html  classArray2_1_1iterator.html  classFluid-members.html  classFluid.html  classParticle-members.html  classParticle.html  classSimulation-members.html  classSimulation.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  export__data_8hpp_source.html  files.html  fluid_8hpp_source.html  functions.html  functions_func.html  hierarchy.html  index.html  levelset__constructors_8hpp_source.html  levelset__methods_8hpp_source.html  particle__levelset__method_8hpp_source.html  settings_8hpp_source.html  simulation_8hpp_source.html  structArray2-members.html  structArray2.html  structFluidConfig-members.html  structFluidConfig.html  structVelocityField-members.html  structVelocityField.html  velocityfield_8hpp_source.html
docs/html/: annotated.html  array2_8hpp_source.html  classA.html  classFluid.html  classParticle-members.html  classParticle.html  classSimulation.html  classThe.html  classeach.html  classes.html  files.html  functions_func.html  index.html  levelset__constructors_8hpp_source.html  md_README.html  pages.html  settings_8hpp_source.html  simulation_8hpp_source.html  structArray2.html  structFluidConfig.html
docs/html/search/: all_0.js  all_1.js  all_2.js  classes_0.js  functions_2.js  functions_4.js  searchdata.js
docs/latex/: annotated.tex  classA.tex  classFluid.tex  classParticle.tex  classSimulation.tex  classThe.tex  classeach.tex  md_README.tex  refman.tex  structArray2.tex  structFluidConfig.tex
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  searchdata.js
examples/: complex_rxn.json  dam_break.json  falling_drop.json  reaction_surf.json  triple_bubble.json
examples/air_bubble/data/: phi.txt  vel.txt
lib/: CMakeLists.txt  calculus.hpp  levelset_constructors.hpp  levelset_methods.hpp  notes.txt  settings.hpp  simulation.hpp  velocityfield.hpp
plot/: draw_phi.gnu  example_phi.txt  movie.py  plot.py
plot/data/: part.txt  phi.txt  vel.txt
rti/data/: phi.txt  vel.txt
src/: CMakeLists.txt  array2.hpp  array2.hpp.txt  calculus.hpp  calculus_2.hpp  export_data.hpp  fluid.hpp  levelset_constructors.hpp  levelset_methods.hpp  main.cpp  notes.txt  particle_levelset_method.hpp  settings.h  settings.hpp  simulation.cpp  simulation.hpp
test/: CMakeLists.txt  catch.hpp  test_calculus.cpp  test_main.cpp  test_null.cpp
